# embassy-demo

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: aliases.rs  main.rs
src/devices/: mod.rs  nrf52832.rs  nrf52840.rs  nucleo429.rs
