[package]
authors = ["Kentaro Okuda <lonesometraveler@mac.com>"]
edition = "2021"
readme = "README.md"
name = "embassy-demo"
version = "0.1.0"

[features]
default = ["nightly"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-nrf/unstable-traits", "embedded-io/async"]
nrf52832dk = []
nrf52840dk = []

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embedded-io = "0.3.0"
embedded-hal = "0.2"

defmt = "0.3"
defmt-rtt = "0.3"

[[bin]]
name = "embassy-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
