[package]
authors = ["Kentaro Okuda <lonesometraveler@mac.com>"]
edition = "2021"
readme = "README.md"
name = "embassy-demo"
version = "0.1.0"

[features]
default = ["nightly", "nrf52840dk"]
nightly = ["embassy-executor/nightly", "embedded-io/async"]
nrf52832dk = ["embassy-nrf/nightly", "embassy-nrf/nrf52832"]
nrf52840dk = ["embassy-nrf/nightly", "embassy-nrf/nrf52840"]
nucleo429 = ["embassy-stm32/nightly", "embassy-stm32/unstable-traits", "embassy-stm32/unstable-traits", "embassy-stm32/stm32f429zi"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac", "unstable-traits"], optional = true }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "memory-x", "time-driver-any", "exti"], optional = true }
embedded-io = "0.4.0"
embedded-hal = { package = "embedded-hal", version = "=1.0.0-alpha.9"}

defmt = "0.3"
defmt-rtt = "0.3"

[[bin]]
name = "embassy-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
